[package]
name = "reasoner-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sophia.workspace = true
json-ld.workspace = true
iri-string = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
