[package]
name = "rules-cyber"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reasoner-core = { path = "../reasoner" }
reasoner-graph = { path = "../graph" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex = "1.10"

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
